# servo-skull-ros2

./: .gitignore  .gitmodules  axengine-0.1.3-py3-none-any.whl  commonROS2Commands.md  generate_wav.py  play_wav_test.py  pulsar_2_llm_build_commands.txt  run_speaker_node.sh  test_play_latest_wav.py  test_wav.py
.claude/: settings.local.json
docs/: TASKS.md  axllm-langgraph-gameplan.md  axllm-native-build-run-matrix.md  qwen-agent-tool-output-extraction-design.md  stt-speaking-gate-and-halt-reenable-plan.md  task8-state-machine-spec.md  tool-registry-and-contract-evolution-plan.md
scripts/: axllm_native_tokenizer_preflight.sh  evaluate_axllm_server.py  pi_fsm_gate_smoketest.sh  pi_interrupt_quickcheck.sh  run_qwen2_5_axcl_custom.sh  start_axllm_native_serve.sh
src/launch/: testing.launch.py
src/llm_node/: CMakeLists.txt  package.xml
src/microphone_node/: CMakeLists.txt  README.md  package.xml
src/microphone_node/include/microphone_node/: microphone_node.hpp  webrtc_vad_wrapper.hpp
src/microphone_node/src/: microphone_node.bak.cpp  microphone_node.cpp
src/microphone_node/src/rtc_base/: checks.cc
src/microphone_node/src/signal_processing/: complex_bit_reverse.c  complex_fft.c  cross_correlation.c  division_operations.c  dot_product_with_scale.cc  downsample_fast.c  energy.c  get_scaling_square.c  min_max_operations.c  resample_48khz.c  resample_by_2_internal.c  resample_fractional.c  spl_init.c  spl_inl.c  spl_sqrt.c  vector_scaling_operations.c
src/microphone_node/src/signal_processing/include/: signal_processing_library.h  spl_inl.h
src/microphone_node/src/webrtc_vad/: vad_core.c  vad_core.h  vad_filterbank.c  vad_gmm.c  vad_sp.c  webrtc_vad.c
src/microphone_node/test/: test_audio_queue.cpp  test_webrtc_vad_wrapper.cpp
src/person_sensor_node/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/person_sensor_node/msg/: PersonDetection.msg
src/person_sensor_node/person_sensor_node/: person_sensor_node.py
src/person_sensor_node/test/: test_copyright.py  test_flake8.py  test_person_sensor_node.py
src/person_tracking_node/: CMakeLists.txt  README.md  package.xml
src/person_tracking_node/launch/: hardware_test.launch.py
src/person_tracking_node/src/: person_tracking_node.cpp  person_tracking_node.hpp
src/person_tracking_node/test/: CMakeLists.txt  test_person_tracking_node.cpp
src/servo_skull_esp32/: README.md  package.xml  setup.cfg  setup.py
src/servo_skull_esp32/servo_skull_esp32/: interface_node.py  test_led_display_cmd.py
src/servo_skull_esp32/servo_skull_esp32/nodes/: __init__.py
src/servo_skull_launch/: README.md  package.xml  setup.cfg  setup.py
src/servo_skull_launch/launch/: axllm_native_backend.launch.py  test_audio_stt.launch.py  test_full_audio_pipeline.launch.py  test_tts_speaker.launch.py  testing.launch.py
src/servo_skull_msgs/: CMakeLists.txt  README.md  package.xml
src/servo_skull_msgs/msg/: AudioData.msg  LlmInput.msg  LlmStatus.msg  PlaybackTiming.msg  StateTransition.msg  TrackedPerson.msg  TrackedPersons.msg
src/skull_control_node/: README.md  package.xml  setup.cfg  setup.py
src/skull_control_node/configs/: axcl_servo_skull.yaml  http_servo_skull.yaml  smollmv2_servo_skull.yaml  tool_grammar.gbnf
src/skull_control_node/launch/: llm_agent_axcl.launch.py  llm_agent_http.launch.py  skull_control.launch copy.py  skull_control.launch.py  test_llama.launch.py  testing.launch.py
src/skull_control_node/skull_control_node/: agent_tools.py  axcl_runtime_client.py  axllm_http_client.py  chat_engine.py  dumb_action_client_node.py  llm_agent_axcl_node.py  llm_agent_http_node.py  llm_agent_node.py  llm_conversation_buffer.py  response_parser.py  skull_control_bt_node.py  skull_control_node.py  test_bt_nodes.py  test_llama.py
src/skull_control_node/skull_control_node/utils/: __init__.py  context_input_helpers.py  context_reset_manager.py  formatting_parsing_helpers.py  generation_stage.py  prompt_intake_stage.py  response_output_stage.py  response_parser.py  response_processing_stage.py  summary_refinement_helpers.py
src/skull_control_node/test/: test_bt_nodes.py  test_interrupt_handling.py  test_llm_cancel_behavior.py  test_llm_conversation_buffer.py  test_llm_http_context_budget.py  test_llm_stage_modules.py  test_response_parser.py
src/speaker_node/: README.md  package.xml  setup.cfg  setup.py
src/speaker_node/speaker_node/: speaker_node.py  test_direct_speaker_node.py
src/stt_node/: README.md  package.xml  pytest.ini  setup.py
src/stt_node/stt_node/: stt_node.py
src/stt_node/test/: test_stt_node.py
src/tts_node/: README.md  package.xml  setup.cfg  setup.py
src/tts_node/test/: test_tts_node.py
src/tts_node/tts_node/: tts_node.py
