<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>microphone_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mgudesblatart@gmail.com">murray</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>servo_skull_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>portaudio19-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
