<?xml version="1.0"?>
<package format="3">
  <name>person_tracking_node</name>
  <version>0.0.1</version>
  <description>Person tracking node for ROS2 Jazzy</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>servo_skull_msgs</depend>
  <depend>person_sensor_node</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
  </export>
</package>
