<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>person_tracking_node</name>
  <version>0.0.1</version>
  <description>Person tracking node for ROS2 Jazzy</description>
  <maintainer email="mgudesblatart@gmail.com">Murray Gudesblat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>servo_skull_msgs</depend>

  <exec_depend>person_sensor_node</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
