<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo_skull_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mgudesblatart@gmail.com">murray</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>microphone_node</exec_depend>
  <exec_depend>stt_node</exec_depend>
  <exec_depend>tts_node</exec_depend>
  <exec_depend>servo_skull_esp32</exec_depend>
  <exec_depend>person_sensor_node</exec_depend>
  <exec_depend>person_tracking_node</exec_depend>
  <exec_depend>servo_skull_msgs</exec_depend>
  <exec_depend>servo_control_node</exec_depend>
  <exec_depend>speaker_node</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
