<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tts_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mgudesblatart@gmail.com">murray</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>servo_skull_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
