<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tts_node</name>
  <version>0.0.0</version>
  <description>ROS2 node for text-to-speech using Piper TTS.</description>
  <maintainer email="mgudesblatart@gmail.com">murray</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>servo_skull_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
